--- a/templates/about.html
+++ b/templates/about.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <title>Садовник. О нас</title>
-</head>
+{% extends "base.html" %}
+{% block title %}Садовник - О нас{% endblock %}
+{% block content %}
+  <section class="about">
 <body>
   <main class="container">
     <h1>Садовник предоставляет самые качественные услуги!</h1>
-    <h2>По сути это все, что вам нужно знать!</h2>
+    <h2>О НАС</h2>
     <h2><a class="order-link" href="https://wa.me/79006722106" target="blank">Заказать услугу</a></h2>
   </main>
 </body>
-</html>
+</section>
+{% endblock %}
