--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
     <nav class="navbar">
       <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Логотип">
       <ul class="nav-links">
-        <li><a href="#hero">На главную</a></li>
-        <li><a href="#services">Услуги</a></li>
-        <li><a href="#about">О нас</a></li>
+        <li><a href="{{ url_for('homepage') }}">На главную</a></li>
+        <li><a href="{{ url_for('services_page') }}">Услуги</a></li>
+        <li><a href="{{ url_for('about_page') }}">О нас</a></li>
       </ul>
       <a href="https://wa.me/79006722106" target="_blank" class="cta">Написать нам</a>
     </nav>
@@ -136,5 +136,9 @@
       updateCarousel();
     });
   </script>
+  <!-- Футер -->
+    <footer class="footer">
+      <p>© 2025 Садовник. Все права защищены.</p>
+    </footer>
 </body>
 </html>
