--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <li><a href="{{ url_for('services_page') }}">Услуги</a></li>
         <li><a href="{{ url_for('about_page') }}">О нас</a></li>
       </ul>
-      <a href="https://wa.me/79006722106" target="_blank" class="cta">Написать нам</a>
+      <a href="https://wa.me/79006722106" target="_blank" class="cta">Написать нам!</a>
     </nav>
 
     <div class="hero-content">
