--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
   <!-- Навбар -->
   <nav class="navbar">
-    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Логотип">
+    <img src="{{ url_for('static', filename='images/s_logo_big.png') }}" alt="Логотип">
     <ul class="nav-links">
       <li><a href="{{ url_for('homepage') }}">На главную</a></li>
       <li><a href="{{ url_for('services_page') }}">Услуги</a></li>
