--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="hero">
       <nav class="navbar">
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Логотип" />
+        <img src="{{ url_for('static', filename='images/s_logo_big.png') }}" alt="Логотип" />
         <ul class="nav-links">
           <li>
             <a href="{{ url_for('homepage') }}">На главную</a>
