--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,10 @@
       <div class="hero-content">
         <h1>Садовник</h1>
         <div class="hero-subtext">
-          <p>Предоставляем высокий уровень сервиса,</p>
+          <p>Предоставляем высокий уровень сервиса</p>
+          <p>По благоустройству территорий,</p>
           <p>Вы можете быть уверены в результате,</p>
-          <p>начиная от начала заказа до его завершения!</p>
+          <p>От начала заказа до его завершения!</p>
         </div>
       </div>
     </header>
