--- a/templates/services.html
+++ b/templates/services.html
@@ -6,7 +6,7 @@
   <main class="container">
     <h1>Садовник предоставляет самые качественные услуги!</h1>
     <h2>УСЛУГИ</h2>
-    <h2><a class="order-link" href="https://wa.me/79006722106" target="blank">Заказать услугу</a></h2>
+    <h2><a class="order-link" href="https://wa.me/{{ phone_number }}" target="_blank">Заказать услугу</a></h2>
   </main>
 </body>
 </section>
