--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,9 @@
     </script>
     <!-- Футер -->
     <footer class="footer">
-    <p>© 2025 Садовник. Все права защищены.<a href="https://2gis.ru/omsk/geo/70000001098245624" target="_blank" class="gis">Как нас найти</a></p>
-  </footer>
+      <p>
+        © 2025 Садовник. Все права защищены.<a href="https://2gis.ru/omsk/geo/70000001098245624" target="_blank" class="gis">Как нас найти</a>
+      </p>
+    </footer>
   </body>
 </html>
