--- a/templates/services.html
+++ b/templates/services.html
@@ -1,13 +1,36 @@
-{% extends "base.html" %}
-{% block title %}Садовник - Услуги{% endblock %}
+{% extends 'base.html' %}
+{% block title %}
+  Садовник - Услуги
+{% endblock %}
 {% block content %}
   <section class="services">
-<body>
-  <main class="container">
-    <h1>Садовник предоставляет самые качественные услуги!</h1>
-    <h2>УСЛУГИ</h2>
-    <h2><a class="order-link" href="https://wa.me/{{ phone_number }}" target="_blank">Заказать услугу</a></h2>
-  </main>
-</body>
-</section>
+    <body>
+      <main class="container">
+        <h1>Садовник предоставляет самые качественные услуги!</h1>
+        <h2>УСЛУГИ</h2>
+        <p>1. кронирование и спил деревьев</p>
+        <p>1.1. кронирование дерева</p>
+        <p>1.2 спил дерева</p>
+        <p>1.3 измельчение веток</p>
+        <p>1.4 утилизация деревьев</p>
+        <p>2. расчистка участков под ключ</p>
+        <p>2.1 спил и выкорчевка кустарников/деревьев</p>
+        <p>2.2 спил поросли</p>
+        <p>2.3. покос травы</p>
+        <p>2.4 утилизация мусора, для расчистки участков, в наличии погрузчики, экскаваторы. Для вывоза мусора имеются самосвалы и газели.</p>
+        <p>3. изготовление декора металлоконструкций</p>
+        <p>3.1 изготовление лестниц</p>
+        <p>3.2. изготовление навесов</p>
+        <p>3.3. изготовление каркасов</p>
+        <p>3.4 изготовление мангальных зон</p>
+        <p>3.5 изготовление металлоконструкций на заказ</p>
+        <p>4. озеленение территорий и помещений</p>
+        <p>4.1 посадка растений</p>
+        <p>4.2 посадка деревьев</p>
+        <p>4.3 посев/укладка газона</p>
+        <p>4.4 вертикальное озеленение стен</p>
+        <h2><a class="order-link" href="https://wa.me/{{ phone_number }}" target="_blank">Заказать услугу</a></h2>
+      </main>
+    </body>
+  </section>
 {% endblock %}
