--- a/templates/services.html
+++ b/templates/services.html
@@ -8,27 +8,28 @@
       <main class="container">
         <h1>Садовник предоставляет самые качественные услуги!</h1>
         <h2>УСЛУГИ</h2>
-        <p>1. кронирование и спил деревьев</p>
-        <p>1.1. кронирование дерева</p>
-        <p>1.2 спил дерева</p>
-        <p>1.3 измельчение веток</p>
-        <p>1.4 утилизация деревьев</p>
-        <p>2. расчистка участков под ключ</p>
-        <p>2.1 спил и выкорчевка кустарников/деревьев</p>
-        <p>2.2 спил поросли</p>
-        <p>2.3. покос травы</p>
-        <p>2.4 утилизация мусора, для расчистки участков, в наличии погрузчики, экскаваторы. Для вывоза мусора имеются самосвалы и газели.</p>
-        <p>3. изготовление декора металлоконструкций</p>
-        <p>3.1 изготовление лестниц</p>
-        <p>3.2. изготовление навесов</p>
-        <p>3.3. изготовление каркасов</p>
-        <p>3.4 изготовление мангальных зон</p>
-        <p>3.5 изготовление металлоконструкций на заказ</p>
-        <p>4. озеленение территорий и помещений</p>
-        <p>4.1 посадка растений</p>
-        <p>4.2 посадка деревьев</p>
-        <p>4.3 посев/укладка газона</p>
-        <p>4.4 вертикальное озеленение стен</p>
+        <p>1. Кронирование и спил деревьев</p>
+        <p>1.1. Кронирование дерева</p>
+        <p>1.2 Спил дерева</p>
+        <p>1.3 Измельчение веток</p>
+        <p>1.4 Утилизация деревьев</p>
+        <p>2. Расчистка участков под ключ</p>
+        <p>2.1 Спил и выкорчевка кустарников/деревьев</p>
+        <p>2.2 Спил поросли</p>
+        <p>2.3. Покос травы</p>
+        <p>2.4 Утилизация мусора</p>
+        <p>Для расчистки участков, в наличии погрузчики, экскаваторы. Для вывоза мусора имеются самосвалы и газели.</p>
+        <p>3. Изготовление декора металлоконструкций</p>
+        <p>3.1 Изготовление лестниц</p>
+        <p>3.2. Изготовление навесов</p>
+        <p>3.3. Изготовление каркасов</p>
+        <p>3.4 Изготовление мангальных зон</p>
+        <p>3.5 Изготовление металлоконструкций на заказ</p>
+        <p>4. Озеленение территорий и помещений</p>
+        <p>4.1 Посадка растений</p>
+        <p>4.2 Посадка деревьев</p>
+        <p>4.3 Посев/укладка газона</p>
+        <p>4.4 Вертикальное озеленение стен</p>
         <h2><a class="order-link" href="https://wa.me/{{ phone_number }}" target="_blank">Заказать услугу</a></h2>
       </main>
     </body>
