--- a/templates/index.html
+++ b/templates/index.html
@@ -52,24 +52,24 @@
         <h2>Наши услуги</h2>
         <div class="services-grid">
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/tree.jpg') }}" alt="Садим самолеты и деревья" />
-            <h3>Садим самолеты и деревья</h3>
-            <p>Уже посадили 3 дерева, 5 преступников и 0 самолётов.</p>
+            <img src="{{ url_for('static', filename='images/tree.jpg') }}" alt="Кронирование и спил деревьев" />
+            <h3>Кронирование и спил деревьев</h3>
+            <p>Кронирование, спил, измельчение, утилизация</p>
           </div>
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/trava.jpg') }}" alt="Косим траву" />
-            <h3>Косим траву</h3>
-            <p>Скосили уже порядка миллиона гектаров травы и травки.</p>
+            <img src="{{ url_for('static', filename='images/trava.jpg') }}" alt="Расчистка участков под ключ" />
+            <h3>Расчистка участков под ключ</h3>
+            <p>Выкорчевка кустарников/деревьев, покос травы, утилизация мусора, спил поросли</p>
           </div>
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/zabor.jpeg') }}" alt="Возведем забор" />
-            <h3>Возведем забор</h3>
-            <p>Построили заборы любой сложности и всех цветов.</p>
+            <img src="{{ url_for('static', filename='images/zabor.jpeg') }}" alt="Изготовление декора металлоконструкций" />
+            <h3>Изготовление декора металлоконструкций</h3>
+            <p>Изготовление лестниц, навесов, каркасов, мангальных зон, металлоконструкций на заказ</p>
           </div>
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/penek.jpg') }}" alt="Корчуем пни, валим деревья" />
-            <h3>Корчуем пни, валим деревья</h3>
-            <p>Удалили больше сотни пней и спилили десятки деревьев.</p>
+            <img src="{{ url_for('static', filename='images/ozelenenie.jpg') }}" alt="Озеленение территорий и помещений" />
+            <h3>Озеленение территорий и помещений</h3>
+            <p>Посадка растений, деревьев, посев/укладка газона, вертикальное озеленение стен</p>
           </div>
         </div>
       </section>
