--- a/templates/index.html
+++ b/templates/index.html
@@ -84,10 +84,28 @@
               <img src="{{ url_for('static', filename='images/otziv_3_black.jpg') }}" alt="Отзыв 3" />
             </div>
             <div class="testimonial-item">
+              <img src="{{ url_for('static', filename='images/otziv_4_black.jpg') }}" alt="Отзыв 4" />
+            </div>
+            <div class="testimonial-item">
+              <img src="{{ url_for('static', filename='images/otziv_5_black.jpg') }}" alt="Отзыв 5" />
+            </div>
+            <div class="testimonial-item">
               <img src="{{ url_for('static', filename='images/otziv_2_black.jpg') }}" alt="Отзыв 2" />
             </div>
             <div class="testimonial-item">
+              <img src="{{ url_for('static', filename='images/otziv_6_black.jpg') }}" alt="Отзыв 6" />
+            </div>
+            <div class="testimonial-item">
+              <img src="{{ url_for('static', filename='images/otziv_7_black.jpg') }}" alt="Отзыв 7" />
+            </div>
+            <div class="testimonial-item">
               <img src="{{ url_for('static', filename='images/otziv_1_black.jpg') }}" alt="Отзыв 1" />
+            </div>
+            <div class="testimonial-item">
+              <img src="{{ url_for('static', filename='images/otziv_8_black.jpg') }}" alt="Отзыв 8" />
+            </div>
+            <div class="testimonial-item">
+              <img src="{{ url_for('static', filename='images/otziv_9_black.jpg') }}" alt="Отзыв 9" />
             </div>
           </div>
           <button class="next">&gt;</button>
