--- a/templates/index.html
+++ b/templates/index.html
@@ -52,23 +52,31 @@
         <h2>Наши услуги</h2>
         <div class="services-grid">
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/tree.jpg') }}" alt="Кронирование и спил деревьев" />
-            <h3>Кронирование и спил деревьев</h3>
+            <a href="{{ url_for('services_page') }}">
+              <img src="{{ url_for('static', filename='images/tree.jpg') }}" alt="Кронирование и спил деревьев" />
+              <h3>Кронирование и спил деревьев</h3>
+            </a>
             <p>Кронирование, спил, измельчение, утилизация</p>
           </div>
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/trava.jpg') }}" alt="Расчистка участков под ключ" />
-            <h3>Расчистка участков под ключ</h3>
+            <a href="{{ url_for('services_page') }}">
+              <img src="{{ url_for('static', filename='images/trava.jpg') }}" alt="Расчистка участков под ключ" />
+              <h3>Расчистка участков под ключ</h3>
+            </a>
             <p>Выкорчевка кустарников/деревьев, покос травы, утилизация мусора, спил поросли</p>
           </div>
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/zabor.jpeg') }}" alt="Изготовление декора металлоконструкций" />
-            <h3>Изготовление декора металлоконструкций</h3>
+            <a href="{{ url_for('services_page') }}">
+              <img src="{{ url_for('static', filename='images/zabor.jpeg') }}" alt="Изготовление декора металлоконструкций" />
+              <h3>Изготовление декора металлоконструкций</h3>
+            </a>
             <p>Изготовление лестниц, навесов, каркасов, мангальных зон, металлоконструкций на заказ</p>
           </div>
           <div class="service-item">
-            <img src="{{ url_for('static', filename='images/ozelenenie.jpg') }}" alt="Озеленение территорий и помещений" />
-            <h3>Озеленение территорий и помещений</h3>
+            <a href="{{ url_for('services_page') }}">
+              <img src="{{ url_for('static', filename='images/ozelenenie.jpg') }}" alt="Озеленение территорий и помещений" />
+              <h3>Озеленение территорий и помещений</h3>
+            </a>
             <p>Посадка растений, деревьев, посев/укладка газона, вертикальное озеленение стен</p>
           </div>
         </div>
