--- a/templates/index.html
+++ b/templates/index.html
@@ -53,27 +53,27 @@
         <div class="services-grid">
           <div class="service-item">
             <a href="{{ url_for('services_page') }}">
-              <img src="{{ url_for('static', filename='images/tree.jpg') }}" alt="Кронирование и спил деревьев" />
+              <img src="{{ url_for('static', filename='images/tree.jpg') }}#tree-service" alt="Кронирование и спил деревьев" />
               <h3>Кронирование и спил деревьев</h3>
             </a>
             <p>Кронирование, спил, измельчение, утилизация</p>
           </div>
           <div class="service-item">
-            <a href="{{ url_for('services_page') }}">
+            <a href="{{ url_for('services_page') }}#clearing-service">
               <img src="{{ url_for('static', filename='images/trava.jpg') }}" alt="Расчистка участков под ключ" />
               <h3>Расчистка участков под ключ</h3>
             </a>
             <p>Выкорчевка кустарников/деревьев, покос травы, утилизация мусора, спил поросли</p>
           </div>
           <div class="service-item">
-            <a href="{{ url_for('services_page') }}">
+            <a href="{{ url_for('services_page') }}#metal-service">
               <img src="{{ url_for('static', filename='images/zabor.jpeg') }}" alt="Изготовление декора металлоконструкций" />
               <h3>Изготовление декора металлоконструкций</h3>
             </a>
             <p>Изготовление лестниц, навесов, каркасов, мангальных зон, металлоконструкций на заказ</p>
           </div>
           <div class="service-item">
-            <a href="{{ url_for('services_page') }}">
+            <a href="{{ url_for('services_page') }}#green-service">
               <img src="{{ url_for('static', filename='images/ozelenenie.jpg') }}" alt="Озеленение территорий и помещений" />
               <h3>Озеленение территорий и помещений</h3>
             </a>
