--- a/templates/services.html
+++ b/templates/services.html
@@ -7,24 +7,24 @@
     <body>
       <main class="container">
         <h2>УСЛУГИ</h2>
-        <p>1. Кронирование и спил деревьев</p>
+        <p id="tree-service">1. Кронирование и спил деревьев</p>
         <p>1.1. Кронирование дерева</p>
         <p>1.2 Спил дерева</p>
         <p>1.3 Измельчение веток</p>
         <p>1.4 Утилизация деревьев</p>
-        <p>2. Расчистка участков под ключ</p>
+        <p id="clearing-service">2. Расчистка участков под ключ</p>
         <p>2.1 Спил и выкорчевка кустарников/деревьев</p>
         <p>2.2 Спил поросли</p>
         <p>2.3. Покос травы</p>
         <p>2.4 Утилизация мусора</p>
         <p>Для расчистки участков, в наличии погрузчики, экскаваторы. Для вывоза мусора имеются самосвалы и газели.</p>
-        <p>3. Изготовление декора металлоконструкций</p>
+        <p id="metal-service">3. Изготовление декора металлоконструкций</p>
         <p>3.1 Изготовление лестниц</p>
         <p>3.2. Изготовление навесов</p>
         <p>3.3. Изготовление каркасов</p>
         <p>3.4 Изготовление мангальных зон</p>
         <p>3.5 Изготовление металлоконструкций на заказ</p>
-        <p>4. Озеленение территорий и помещений</p>
+        <p id="green-service">4. Озеленение территорий и помещений</p>
         <p>4.1 Посадка растений</p>
         <p>4.2 Посадка деревьев</p>
         <p>4.3 Посев/укладка газона</p>
