--- a/static/styles.css
+++ b/static/styles.css
@@ -19,14 +19,13 @@ body {
   justify-content: space-between;
   background: rgba(0, 0, 0, 0.5);
   min-height: 80px;
+  /* Изменено на min-height */
   padding: 0 40px;
-  position: relative;
-  z-index: 20;
-  /* Увеличиваем z-index для навбара */
 }
 
 .navbar img {
   max-height: 70px;
+  /* Ограничение высоты */
   width: auto;
   object-fit: contain;
 }
@@ -93,8 +92,6 @@ body {
   text-shadow: 0 0 8px rgba(19, 32, 14, 0.846);
   padding: 10px 30px;
   color: #ffffff;
-  z-index: 10;
-  /* Убедимся, что заголовок под навбаром */
 }
 
 .hero-subtext {
@@ -391,8 +388,6 @@ a:hover {
 @media (max-width: 1200px) {
   .hero h1 {
     font-size: 80px;
-    top: 120px;
-    /* Увеличиваем отступ сверху */
   }
 
   .hero-subtext {
@@ -408,12 +403,6 @@ a:hover {
 
   .about-photo {
     margin: 0 auto;
-  }
-
-  .hero h1 {
-    font-size: 70px;
-    top: 110px;
-    /* Увеличиваем отступ сверху */
   }
 }
 
@@ -440,8 +429,7 @@ a:hover {
   /* Герой */
   .hero h1 {
     font-size: 60px;
-    top: 100px;
-    /* Увеличиваем отступ сверху */
+    top: 80px;
     left: 30px;
   }
 
@@ -495,22 +483,18 @@ a:hover {
   }
 
   /* Герой */
-  .hero {
-    padding-top: 70px;
-    /* Добавляем отступ сверху */
-  }
-
   .hero h1 {
-    position: absolute;
-    top: 100px;
-    /* Фиксируем отступ сверху */
-    left: 20px;
     font-size: 40px;
+    top: 60px;
+    left: 20px;
     padding: 5px 15px;
   }
 
   .hero-content {
     padding: 20px;
+    top: auto;
+    left: auto;
+    position: relative;
   }
 
   .hero-subtext {
@@ -521,7 +505,6 @@ a:hover {
     margin: 0 auto;
     padding: 20px 0;
     max-width: 90%;
-    font-size: 16px;
   }
 
   /* О нас */
@@ -572,14 +555,5 @@ a:hover {
   .gis {
     display: block;
     margin-top: 10px;
-  }
-}
-
-/* Дополнительный медиазапрос для очень маленьких экранов */
-@media (max-width: 400px) {
-  .hero h1 {
-    top: 90px;
-    /* Уменьшаем отступ для очень маленьких экранов */
-    font-size: 36px;
   }
 }
